--- a/src/player.scss
+++ b/src/player.scss
@@ -34,6 +34,9 @@ $darkblue: #5163A6;
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-keyboard:before {
+	content: "\e955";
+}
 .icon-print:before {
 	content: "\e954";
 }
@@ -82,18 +85,11 @@ html, body {
 		-webkit-transition: all 0.1s ease;
 		-webkit-appearance: none;
 	}
-
+	
 	button {
 		display: inline-block;
-		// position: relative;
 
-		// padding: 2px;
 		color: #fff;
-		// // margin: 10px 0px;
-		// // margin-right: 4px;
-		// // padding: 4px 8px;
-		
-		// background: #C5C5C5;
 		border: solid 2px rgba(0,0,0,0);
 		cursor: pointer;
 
@@ -183,7 +179,7 @@ html, body {
 
 	#options {
 		position: relative;
-		.icon-print, .icon-zoomin, .icon-zoomout {
+		.icon-keyboard, .icon-print, .icon-zoomin, .icon-zoomout {
 			position: absolute;
 			right: 204px;
 			z-index: 100;
@@ -213,12 +209,15 @@ html, body {
 				// border: solid 1px #5163A6;
 			}
 		}
-		.icon-print {
+		.icon-keyboard {
 			top: 10px;
+		}
+		.icon-print {
+			top: 40px;
 			
 		}
 		.icon-zoomout {
-			top: 40px;
+			top: 70px;
 		}
 	}
 
@@ -545,8 +544,8 @@ input, button {
 	}
 }
 
-#alertbox {
-	display: block;
+#alertbox, #tutorialbox {
+	display: none;
 	margin: 0 auto;
 	min-width: 300px;
 	max-width: 500px;
@@ -556,6 +555,10 @@ input, button {
 	border-radius: 3px;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 	text-align: center;
+
+	&.show {
+		display: block;
+	}
 
 	&:focus {
 		border-color: #5163A6;
@@ -568,6 +571,15 @@ input, button {
 			display: block;
 			height: 3px;
 		}
+	}
+
+	header {
+		margin-bottom: 1em;
+		font-weight: bold;
+	}
+
+	span.bold {
+		font-weight: bold;
 	}
 
 	button {
