--- a/src/creator.scss
+++ b/src/creator.scss
@@ -38,7 +38,7 @@ body {
 
 	.logo {
 		display: block;
-		background: url(assets/materialogo.png) no-repeat;
+		background: url(assets/materia-logo.svg) no-repeat;
 		width: 60px;
 		height: 50px;
 		float: left;
