--- a/src/player.scss
+++ b/src/player.scss
@@ -2,6 +2,9 @@ $green:#5BAC58;
 $lightgreen:#6BBC68;
 $darkblue: #5163A6;
 
+// adjust this to change size of clue box
+$clue_width: calc(max(25vw, 200px));
+
 /* Standardize padding in all browsers */
 * {
 	outline: 0;
@@ -184,7 +187,7 @@ html, body {
 		position: relative;
 		.icon-tutorial, .icon-keyboard, .icon-print, .icon-zoomin, .icon-zoomout {
 			position: absolute;
-			right: 204px;
+			right: calc($clue_width + 4px);
 			z-index: 100;
 
 			color: #999;
@@ -242,13 +245,18 @@ html, body {
 			position: fixed;
 			top: 70px;
 			left: 10px;
-			right: 210px;
+			right: calc($clue_width + 10px);
 			bottom: 10px;
+			// border: solid;
+			// border-color: #000;
 		}
 
 		.crossword-board {
 			width: 100%;
 			height: 100%;
+			// outline: dashed;
+			// outline-offset: 8px;
+			// outline-color: #47C342;
 
 			&:focus {
 				background: rgba(255,255,255,0.5);
@@ -309,7 +317,7 @@ html, body {
 		right: 0px;
 		top: 61px;
 		bottom: 28px;
-		width: 200px;
+		width: $clue_width;
 
 		padding: 0 0 20px 0;
 
@@ -433,7 +441,7 @@ html, body {
 		#specialInputBody {
 			box-sizing: border-box;
 			height: 60px;
-			max-width: calc(100vw - 220px);
+			max-width: calc(100vw - $clue_width - 20px);
 			margin: 0;
 			padding: 5px;
 			background-color: #333333;
@@ -739,7 +747,7 @@ input, button {
 
 	color: #fff;
 
-	width: 201px;
+	width: calc($clue_width + 1px);
 	padding: 5px 0;
 
 	z-index: 10;
