--- a/src/player.scss
+++ b/src/player.scss
@@ -227,13 +227,6 @@ html, body {
 				// border: solid 1px #5163A6;
 			}
 
-			#focus-text {
-				font-family: 'Roboto Slab';
-				font-size: 12px;
-				position: relative;
-				bottom: 4px;
-				right: -4px;
-			}
 		}
 		.icon-tutorial {
 			top: 10px;
@@ -253,16 +246,26 @@ html, body {
 	}
 
 	#board {
-		// position: fixed;
+		position: relative;
 		display: block;
-
 		width: 100%;
-		height: calc(100% - 61px);
+		height: calc(100% - 60px);
+		top: 60px;
 	
 		// max-height: 592;
 		// max-width: 715;
 	
 		overflow: hidden;
+
+		#focus-text {
+			font-family: 'Roboto Slab';
+			font-size: 24px;
+			color: #999;
+			position: absolute;
+			top: 16px;
+			left: 16px;
+			z-index: 100;
+		}
 
 		#movable-container {
 			position: fixed;
@@ -277,19 +280,16 @@ html, body {
 		.crossword-board {
 			width: 100%;
 			height: 100%;
-			// outline: dashed;
-			// outline-offset: 8px;
-			// outline-color: #47C342;
+			padding: 20px;
+			border-radius: 0px;
+			outline: solid;
+			outline-color: #BABABA;
+			outline-offset: -8px;
+			box-shadow: 0px 0px 4px 4px #BABABA;
+			background-color: rgba(255, 255, 255, 0.8);
 
 			&:focus {
 				background: rgba(255,255,255,0.5);
-				// &:before {
-				// 	position: absolute;
-				// 	z-index: 200;
-				// 	content: 'Board is focused.';
-				// 	left: 50%;
-				// 	bottom: 10%;
-				// }
 			}
 
 			.letter {
@@ -330,6 +330,15 @@ html, body {
 			}
 		}
 
+		.focused {
+			background-color: #b2d1e961;
+			box-shadow: 0px 0px 4px 4px #b2d1e9;
+			outline-color: transparent;
+
+			&:focus {
+				background-color: #b2d1e961;
+			}
+		}
 	}
 
 	#clues {
@@ -354,7 +363,8 @@ html, body {
 			transition: all 0.1s ease;
 			-moz-transition: all 0.1s ease;
 			-webkit-transition: all 0.1s ease;
-			overflow-x: auto;
+			overflow-x: hidden;
+			overflow-y: hidden;
 			em {
 				opacity: 0.5;
 			}
@@ -530,14 +540,22 @@ input, button {
 
 #movable {
 	position: absolute;
-	-webkit-transition: -webkit-transform 1s ease;
-	-moz-transition: -moz-transform 1s ease;
-	transition: transform 1s ease;
 	transform-origin: 0 0;
 
+	transition:
+		transform 1s ease,
+		background-color 1s ease,
+		outline-color 1s ease,
+		box-shadow 1s ease;
 
 	&.animateall {
-		transition-property: left, top, transform;
+		transition:
+			transform 1s ease,
+			left 1s ease,
+			top 1s ease,
+			background-color 1s ease,
+			outline-color 1s ease,
+			box-shadow 1s ease;
 	}
 }
 
@@ -837,6 +855,8 @@ input, button {
 	}
 
 	.application {
+		position: relative;
+		
 		#specialInput {
 			bottom: 32px;
 			
