--- a/src/player.scss
+++ b/src/player.scss
@@ -280,11 +280,11 @@ html, body {
 		.crossword-board {
 			width: 100%;
 			height: 100%;
-			padding: 20px;
+			padding: 24px;
 			border-radius: 0px;
 			outline: solid;
 			outline-color: #BABABA;
-			outline-offset: -8px;
+			outline-offset: -4px;
 			box-shadow: 0px 0px 4px 4px #BABABA;
 			background-color: rgba(255, 255, 255, 0.8);
 
@@ -468,6 +468,10 @@ html, body {
 
 			&:focus {
 				background-color: $darkblue;
+			}
+
+			&::marker {
+				margin-right: 48px;
 			}
 		}
 
@@ -887,7 +891,7 @@ input, button {
 		}
 
 		#options {
-			top: calc(100vh - 180px);
+			top: calc(100vh - 140px);
 			.icon-tutorial, .icon-keyboard, .icon-print, .icon-zoomin, .icon-zoomout, .icon-center {
 				right: 4px;
 			}
