--- a/src/scoreScreen.scss
+++ b/src/scoreScreen.scss
@@ -38,7 +38,7 @@ $lightgreen:#6BBC68;
 	color: #999;
 	position: absolute;
 	right: 210px;
-	top: 10px;
+	top: 26px;
 	z-index: 6;
 
 	font-family: 'icomoon';
@@ -63,7 +63,7 @@ $lightgreen:#6BBC68;
 
 html, body {
 	cursor: default;
-	background: #eeedee;
+	background: rgba(255, 255, 255, 0.8);
 	padding: 0;
 	margin: 0;
 	word-wrap: break-word;
@@ -79,11 +79,15 @@ html, body {
 	user-select: none;
 }
 
+body {
+	border-top: solid 16px rgb(118, 128, 141);
+}
+
 #board {
 	position: fixed;
 	display: block;
 	left: 0px;
-	top: 0px;
+	top: 16px;
 	right: 0px;
 	bottom: 0px;
 
@@ -111,6 +115,7 @@ html, body {
 		background: #777;
 		padding: 5px;
 		color: #fff;
+		cursor: pointer;
 
 		position:relative;
 		margin-left: 20px;
@@ -135,7 +140,7 @@ html, body {
 		&:before {
 			content: 'ON';
 			background: #70be34;
-			margin-left: 35px;
+			margin-left: 36px;
 			padding-left: 13px;
 		}
 	}
@@ -160,35 +165,35 @@ html, body {
 }
 
 .letter.incorrect:not(.neutral) {
-	background: #FB8A8A;
+	background: #FB8A8A80;
 	border: solid 1px #922;
 
 	&.highlight {
 		border: solid 1px black;
-		background: #E75A5A;
+		background: #ff6a6aa0;
 		font-weight: bold;
 	}
 
-	&.hinted {
-		-webkit-box-shadow: inset 0 0 5px 1px yellow;
-		box-shadow: inset 0 0 5px 1px yellow;
-	}
+	// &.hinted {
+	// 	-webkit-box-shadow: inset 0 0 5px 1px yellow;
+	// 	box-shadow: inset 0 0 5px 1px yellow;
+	// }
 }
 
 .letter.correct:not(.neutral) {
-	background: #B9FFB9;
+	background: #B9FFB980;
 	border: solid 1px #292;
 
 	&.highlight {
 		border: solid 1px black;
-		background: #91EC7D;
+		background: #77ff77a0;
 		font-weight: bold;
 	}
 
-	&.hinted {
-		-webkit-box-shadow: inset 0 0 5px 1px orange;
-		box-shadow: inset 0 0 5px 1px orange;
-	}
+	// &.hinted {
+	// 	-webkit-box-shadow: inset 0 0 5px 1px orange;
+	// 	box-shadow: inset 0 0 5px 1px orange;
+	// }
 }
 
 .letter.highlight.neutral,
@@ -206,30 +211,37 @@ html, body {
 	display: block;
 	position: absolute;
 	right: 0px;
-	top: 0px;
+	top: 16px;
 	bottom: 0px;
 	width: 200px;
 	background: #fff;
 	padding: 0px;
-	padding-bottom: 20px;
 	padding-top: 0px;
 	overflow: auto;
-	border-left: solid 1px #999;
 	z-index: 5;
+	border-left: solid 1px #999;
 
 	.clue{
+		cursor: pointer;
 		font-size: 14px;
 		padding: 7px;
 		margin: 0px;
 		transition: all 0.1s ease;
 		-moz-transition: all 0.1s ease;
 		-webkit-transition: all 0.1s ease;
+		
 		overflow-x: auto;
 		em {
 			opacity: 0.5;
 		}
 		.clueHeader {
-			font-weight: bold;
+			font-size: 12px;
+			margin-top: 4px;
+			opacity: 0.75;
+		}
+
+		.answer {
+			font-family: "Delius Unicase";
 		}
 
 		.hintspot {
@@ -269,7 +281,7 @@ input {
 
 #movable-container {
 	position: fixed;
-	top: 10px;
+	top: 26px;
 	left: 10px;
 	right: 210px;
 	bottom: 10px;
