--- a/src/player.scss
+++ b/src/player.scss
@@ -62,6 +62,9 @@ html, body {
 	height: 100%;
 	
 	background: #eeedee;
+	background-image: url("assets/materia_stagger_bg.png");
+	background-size: 72px;
+	background-position: 0% -16px;
 	padding: 0;
 	margin: 0;
 
@@ -286,10 +289,10 @@ html, body {
 			outline-color: #BABABA;
 			outline-offset: -4px;
 			box-shadow: 0px 0px 4px 4px #BABABA;
-			background-color: rgba(255, 255, 255, 0.8);
+			background-color: rgb(250, 250, 250);
 
 			&:focus {
-				background: rgba(255,255,255,0.5);
+				background: rgb(240, 240, 240);
 			}
 
 			.letter {
@@ -331,12 +334,12 @@ html, body {
 		}
 
 		.focused {
-			background-color: #b2d1e961;
+			background-color: #d4e5f5;
 			box-shadow: 0px 0px 4px 4px #b2d1e9;
 			outline-color: transparent;
 
 			&:focus {
-				background-color: #b2d1e961;
+				background-color: #b2cce5;
 			}
 		}
 	}
@@ -365,6 +368,8 @@ html, body {
 			-webkit-transition: all 0.1s ease;
 			overflow-x: hidden;
 			overflow-y: hidden;
+			cursor: pointer;
+
 			em {
 				opacity: 0.5;
 			}
