--- a/src/scoreScreen.scss
+++ b/src/scoreScreen.scss
@@ -1,5 +1,8 @@
 $green:#5BAC58;
 $lightgreen:#6BBC68;
+$darkblue: #5163A6;
+
+$mobile_w_break: 576px;
 
 /* Standardize padding in all browsers */
 * {
@@ -63,10 +66,15 @@ $lightgreen:#6BBC68;
 
 html, body {
 	cursor: default;
-	background: rgba(255, 255, 255, 0.8);
 	padding: 0;
 	margin: 0;
 	word-wrap: break-word;
+
+	background: #eeedee;
+	background-image: url("assets/materia_stagger_bg.png");
+	background-size: 72px;
+	background-position: 0% -16px;
+
 
 	overflow: hidden;
 
@@ -158,10 +166,24 @@ body {
 	text-align: center;
 	background: #fff;
 
+	cursor: pointer;
+
 	margin: 0;
 
 	color: transparent;
 	text-shadow: 0 0 0 black;
+}
+
+.crossword-board {
+	width: 100%;
+	height: 100%;
+	padding: 24px;
+	border-radius: 0px;
+	outline: solid;
+	outline-color: #BABABA;
+	outline-offset: -4px;
+	box-shadow: 0px 0px 4px 4px #BABABA;
+	background-color: rgb(250, 250, 250);
 }
 
 .letter.incorrect:not(.neutral) {
@@ -311,4 +333,94 @@ input {
 	margin-top:9px;
 	z-index: 1;
 	text-align: right;
+}
+
+#nav-div {
+	visibility: hidden;
+	width: 0px;
+	height: 0px;
+}
+
+#hint-splitter {
+	display: flex;
+	flex-direction: row;
+
+	width: 100%;
+	justify-content: space-between;
+}
+
+input, button {
+	font-family: 'Roboto Slab', sans-serif;
+	font-size: 14px;
+
+	border: solid 2px rgba(0,0,0,0);
+
+	cursor: pointer;
+
+	position: relative;
+	color: #fff;
+	margin: 10px 0px;
+	margin-right: 4px;
+	padding: 4px 8px;
+	display: inline-block;
+	background: #C5C5C5;
+	border: solid 2px rgba(0,0,0,0);
+	cursor: pointer;
+
+	&:focus {
+		border: solid 2px #666;
+	}
+
+	&.action-button {
+		background: $green;
+		border-color: $green;
+
+		color: #fff;
+
+		&:hover {
+			background: $lightgreen;
+			border-color: $lightgreen;
+		}
+	}
+}
+
+@media (width < $mobile_w_break) {
+	#clues {
+		width: 100%;
+		max-height: 200px;
+		height: 150px;
+		overflow-y: scroll;
+		padding: 0px;
+		top: 0px;
+		.clue {
+			transition: all 0s ease;
+			-moz-transition: all 0s ease;
+			-webkit-transition: all 0s ease;
+		}
+
+		border-left: none;
+		border-bottom: solid 1px #999;
+	}
+
+	#board {
+		height: calc(100% - 90px);
+		top: 0px;
+		#movable-container {
+			right: 10px;
+		}
+	}
+
+	#nav-div {
+		visibility: visible;
+		width: fit-content;
+		height: fit-content;
+	}
+
+	.icon-zoomin, .icon-zoomout {
+		visibility: hidden;
+	}
+	
+	body {
+		border-top: none;
+	}
 }
