--- a/src/scoreScreen.scss
+++ b/src/scoreScreen.scss
@@ -182,10 +182,10 @@ body {
 	height: 100%;
 	padding: 24px;
 	border-radius: 0px;
-	outline: solid;
-	outline-color: #BABABA;
+	outline: solid 1px;
+	outline-color: #BABABA75;
 	outline-offset: -4px;
-	box-shadow: 0px 0px 4px 4px #BABABA;
+	box-shadow: 0px 0px 2px 2px #BABABA;
 	background-color: rgb(250, 250, 250);
 }
 
