--- a/src/player.scss
+++ b/src/player.scss
@@ -60,8 +60,10 @@ $mobile_w_break: 576px;
 html, body {
 	width: 100%;
 	height: 100%;
+
+	transition: all 0.5s ease;
 	
-	background: #eeedee;
+	background-color: #ededee;
 	background-image: url("assets/materia_stagger_bg.png");
 	background-size: 72px;
 	background-position: 0% -16px;
@@ -79,6 +81,10 @@ html, body {
 	-ms-user-select: none;
 	-o-user-select: none;
 	user-select: none;
+
+	&.focused {
+		background-color: #d4e5f5;
+	}
 }
 
 .application {
@@ -202,6 +208,7 @@ html, body {
 		top: 60px;
 		.icon-tutorial, .icon-keyboard, .icon-print, .icon-zoomin, .icon-zoomout, .icon-center {
 			position: absolute;
+			background: transparent;
 			right: calc($clue_width + 4px);
 			z-index: 100;
 			
@@ -244,7 +251,11 @@ html, body {
 			top: 100px;
 		}
 		.icon-zoomout, .icon-zoomin {
-			top: 100px;
+			top: 16px;
+			left: 16px;
+			right: auto;
+			font-size: 48px;
+			
 		}
 	}
 
@@ -262,11 +273,11 @@ html, body {
 
 		#focus-text {
 			font-family: 'Roboto Slab';
-			font-size: 24px;
+			font-size: 36px;
 			color: #999;
 			position: absolute;
 			top: 16px;
-			left: 16px;
+			left: 72px;
 			z-index: 100;
 		}
 
